--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-image: linear-gradient(to left, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)) url("../images/group-people-working-website-template.jpg");
+  background-size: cover;
+  background-position: center;
 }
 h1 {
   color: #fff;
@@ -235,3 +238,13 @@ footer {
   gap: 24px;
   padding: 120px 156px;
 }
+/* Dark-bg */
+
+position: absolute;
+width: 1440px;
+height: 600px;
+left: 0px;
+top: 72px;
+
+/* GREY */
+background: rgba(46, 47, 66, 0.7);
