--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: linear-gradient(to left, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)) url("../images/group-people-working-website-template.jpg");
+  background-image: linear-gradient(to left, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/group-people-working-website-template.jpg");
   background-size: cover;
   background-position: center;
 }
