--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,12 @@ img {
   display: flex;
   flex-direction: column;
 }
+.portfolio li:hover {
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 4px 12px rgba(46, 47, 66, 0.2), 0px 4px 4px rgba(46, 47, 66, 0.24), 0px 8px 8px rgba(46, 47, 66, 0.16);
+}
 
 .portfolio h2 {
   font-size: 36px;
